<resources>
    <string name="app_name">Movies App Stage 1</string>
    <string name="main_screen_loading_message">Loading Movies, Please Wait...</string>
    <string name="server_error">Error: Data could not be fetched!</string>
    <string name="title_activity_movie_detail">MovieDetail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sort_movies_by_popularity">Popular Movies</string>
    <string name="sort_movies_by_rating">Top Rated Movies</string>
    <string name="movie_title_label">Title</string>
    <string name="movie_release_date_label">Release Date</string>
    <string name="movie_overview_label">Overview</string>
    <string name="movie_rating_label">Rating</string>
    <string name="movie_details_loading_message">Loading Details, Please Wait...</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="no_reviews_available">No reviews available</string>
    <string name="no_trailers_available">No trailers available</string>
    <string name="my_favourite_movies">My Favourite Movies</string>
</resources>
